# dtCore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  RELEASE.md  build.sh  configure.sh  install.sh  test_dtcore.cpp
cmake/: artfConfig.cmake.in  artfTargets.cmake  package.pc.in
doc/: .gitignore  Doxyfile.in  customdoxygen.css  dtCore.Doxyfile  footer.html  proto2cpp.py  rCore.Doxyfile
doc/html/: graph_legend.html  index.html
doc/latex/: refman.tex
examples/: CMakeLists.txt  exampleBezier.cpp  examplePoly.cpp  exampleScurve.cpp
examples/example_ecal_pub/: CMakeLists.txt  example_ecal_publisher.cpp
examples/example_ecal_sub/: CMakeLists.txt  example_ecal_subscriber.cpp
examples/example_grpc_server/: CMakeLists.txt  example_grpc_server.cpp
examples/example_grpc_service_caller/: CMakeLists.txt  example_grpc_service_caller.cpp
examples/example_grpc_service_client/: example_grpc_service_client.cpp
examples/example_grpc_service_listener/: CMakeLists.txt  example_grpc_service_listener.cpp
examples/example_grpc_state_pub/: CMakeLists.txt  example_grpc_state_publisher.cpp
examples/example_grpc_state_sub/: CMakeLists.txt  example_grpc_state_subscriber.cpp
examples/example_log_csv/: CMakeLists.txt  main.cpp
examples/example_log_file/: CMakeLists.txt  main.cpp
examples/example_log_format/: CMakeLists.txt  main.cpp
examples/example_log_pattern/: CMakeLists.txt  main.cpp
examples/example_log_syslog/: CMakeLists.txt  main.cpp
examples/example_log_terminal/: CMakeLists.txt  main.cpp
examples/example_mcap_filesink/: CMakeLists.txt  example_mcap_filesink.cpp
examples/example_mcap_filesink_rotator/: CMakeLists.txt  example_mcap_filesink_rotator.cpp
examples/example_thread/: CMakeLists.txt  example_thread.cpp
examples/example_thread_lock/: CMakeLists.txt  example_thread_lock.cpp
examples/example_thread_priority/: CMakeLists.txt  example_thread_priority.cpp
examples/example_utils_conf/: CMakeLists.txt  main.cpp
examples/example_utils_dir/: CMakeLists.txt  main.cpp
examples/example_utils_term/: CMakeLists.txt  main.cpp
examples/example_utils_timecheck/: CMakeLists.txt  main.cpp
examples/example_utils_watchdog/: CMakeLists.txt  main.cpp
include/dtCore/: define.h  dtCore  dtDAQ  dtInterpolator.h  dtLog  dtThread  dtTrajectory  dtUtils  type.h
include/dtCore/src/dtDAQ/: dtDAQManager.h  dtDataSink.h  dtDataSinkPB.hpp  dtDataSource.h  dtDataSourcePB.hpp
include/dtCore/src/dtDAQ/ecal/: dtDAQManagerEcal.h  dtDataSinkPBEcal.hpp
include/dtCore/src/dtDAQ/grpc/: dtDAQManagerGrpc.h  dtDataSinkPBGrpc.hpp  dtServiceCallerGrpc.hpp  dtServiceListenerGrpc.hpp  dtStatePublisherGrpc.hpp  dtStateSubscriberGrpc.hpp
include/dtCore/src/dtDAQ/hdf5/: dtDataSinkPBHdf5.hpp
include/dtCore/src/dtDAQ/mcap/: dtDataSinkPBMcap.hpp  dtDataSinkPBMcapRotator.hpp  mcapImp.hpp
include/dtCore/src/dtLog/: dtLog.h  dtLog.hpp  dtLog.tpp
include/dtCore/src/dtThread/: threadImp.h
include/dtCore/src/dtTrajectory/: dtBezier.h  dtBezier.tpp  dtBezierTrajectory.h  dtBezierTrajectory.tpp  dtHTransformTrajectory.h  dtHTransformTrajectory.tpp  dtInterpolator.h  dtInterpolator.tpp  dtOrientationTrajectory.h  dtOrientationTrajectory.tpp  dtPolyTrajectory.h  dtPolyTrajectory.tpp  dtPolynomial.h  dtPolynomial.tpp  dtPolynomialTrajectory.h  dtPolynomialTrajectory.tpp  dtScurve.h  dtScurve.tpp  dtScurveTrajectory.h  dtScurveTrajectory.tpp  dtTrajectory.h  dtTrajectory.tpp  dtTrajectoryList.h  dtTrajectoryList.tpp
include/dtCore/src/dtUtils/: dtConf.cpp  dtConf.h  dtConf.hpp  dtDir.cpp  dtDir.h  dtFileHelper.h  dtFileHelper.hpp  dtGnuPlot.h  dtGnuPlot.tpp  dtLock.hpp  dtStringHelper.h  dtStringHelper.hpp  dtTerminal.cpp  dtTerminal.h  dtTimeCheck.h  dtTimeUtil.hpp  dtWatchdog.hpp
include/dtMath/: dtMath.h
include/dtMath/plugin/: EigenMatrixBasePlugin.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/daq/grpc/: dtStatePublisherGrpc.cpp
src/core/thread/: threadImp.cpp
src/core/utils/: dtDir.cpp  dtFileHelper.cpp  dtStringHelper.cpp  dtTerminal.cpp  dtTimeCheck.cpp
src/proto/: CMakeLists.txt  QuadIP.proto
src/proto/dtProto/: Interaction.proto  Motion.proto  Navigation.proto  Perception.proto  QuadIP.proto  Service.proto  System.proto
src/proto/dtProto/geometry_msgs/: Displacement.proto  HTransform.proto  Matrix.proto  Orientation.proto  Path.proto  Pose.proto  Size.proto  Trajectory.proto  Transform.proto  Twist.proto  Wrench.proto
src/proto/dtProto/hlo_msgs/: hlo.proto
src/proto/dtProto/nav_msgs/: Grid.proto  NavCommand.proto  NavConfig.proto  NavControl.proto  NavState.proto
src/proto/dtProto/perception_msgs/: Object.proto
src/proto/dtProto/robot_msgs/: AnonState.proto  ControlCmd.proto  ControlState.proto  Dock.proto  FrictionCoeff.proto  GripperControl.proto  JointControl.proto  MotionControl.proto  MoveControl.proto  PIDGain.proto  RobotCommand.proto  RobotControl.proto  RobotInfo.proto  RobotState.proto  TaskControl.proto
src/proto/dtProto/sensor_msgs/: EcState.proto  FtSensor.proto  JointState.proto  Joy.proto  MotorState.proto
src/proto/dtProto/std_msgs/: Heartbeat.proto  Request.proto  State.proto  SystemInfo.proto
src/proto/geometry_msgs/: HTransform.proto  Point.proto  Pose.proto  Twist.proto  Vector.proto  Wrench.proto
src/proto/sensor_msgs/: JointState.proto
src/proto/std_msgs/: Header.proto  Heartbeat.proto  SystemInfo.proto
tests/: CMakeLists.txt  exampleBezier.cpp  examplePoly.cpp  exampleScurve.cpp  test_dttraj_poly.cpp  test_trajectory.cpp
